--- a/src/custom-style.scss
+++ b/src/custom-style.scss
@@ -5,3 +5,16 @@
   width: 100%;
   text-align: center;
 }
+
+.spinner-modal {
+  min-width: 50vw;
+}
+
+.spinner-number {
+  border-style: none;
+  border-radius: 10px;
+}
+
+.spinner-button {
+  height: 30px;
+}
